[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bluepy>=1.3.0",
    "coloredlogs>=15.0.1",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "psycopg2-binary>=2.9.10",
    "pycryptodome>=3.22.0",
    "pyqt5>=5.15.11",
    "pyqtgraph>=0.13.7",
    "requests>=2.32.3",
    "scipy>=1.15.2",
    "trafilatura>=2.0.0",
]
